updated code to execute all rolls